--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,2 +1,40 @@
 @import url(./global.css);
 
+/*----- Header -----*/
+
+header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.nav-header span{
+    color: var(--color-primary);
+}
+
+.nav-header ul{
+    display: flex;
+    list-style: none;
+    gap: 40px;
+}
+
+.nav-header  a {
+    text-decoration: none;
+    color: var(--color-black);
+}
+
+.header-content{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.header-content button{
+    background-color: transparent;
+    padding: 16px 32px;
+    border-radius: 10px;
+    color: var(--color-primary);
+    border: 2px solid var(--color-primary);
+}
+
+/*----- Fim Header -----*/
